--- a/vcastplay-cms/src/app/components/playlist/playlist-list-item/playlist-list-item.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-list-item/playlist-list-item.component.html
@@ -1,4 +1,4 @@
-<p-card class="">
+<p-card>
     <ng-template #title>
         <div class="flex gap-2">
             <div class="flex gap-2 items-center">
