--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -12,13 +12,12 @@
                 <div class="flex ml-auto gap-2">
                     @if (isEditMode()) {
                         <p-button class="hidden md:block" (onClick)="onClickDelete(assetForm.value, $event)" label="Delete" 
-                            icon="pi pi-trash" severity="danger" size="small" text />
+                            icon="pi pi-trash" severity="danger" text />
                         <p-button class="block md:hidden" (onClick)="onClickDelete(assetForm.value, $event)" 
-                            icon="pi pi-trash" severity="danger" size="small" pTooltip="Delete" tooltipPosition="bottom" text />
+                            icon="pi pi-trash" severity="danger" pTooltip="Delete" tooltipPosition="bottom" text />
                     }
-                    <p-button class="hidden md:block" (onClick)="onClickSave($event)" label="Save" size="small" icon="pi pi-save" />
-                    <p-button class="block md:hidden" (onClick)="onClickSave($event)" 
-                        size="small" icon="pi pi-save" pTooltip="Save" tooltipPosition="bottom" />
+                    <p-button class="hidden md:block" (onClick)="onClickSave($event)" label="Save" icon="pi pi-save" />
+                    <p-button class="block md:hidden" (onClick)="onClickSave($event)" icon="pi pi-save" pTooltip="Save" tooltipPosition="bottom" />
                 </div>
             </div>
         </ng-template>
