--- a/vcastplay-cms/src/app/pages/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/pages/auth/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="grid grid-cols-5 w-full h-screen">
     <div class="col-span-3 hidden lg:block relative">
         <div class="absolute top-0 left-0 m-5 z-50">
-            <img src="assets/vcast-logo.png" alt="app logo">
+            <img src="assets/vcastplay.png" alt="app logo" width="150">
         </div>
         <p-carousel [value]="slides" [numVisible]="1" [numScroll]="1" [circular]="true" [showIndicators]="false" [showNavigators]="false" [autoplayInterval]="5000">
             <ng-template let-item #item>
                 <div class="flex items-center justify-center w-full h-screen relative">
                     <img [src]="item.image" class="w-full h-full object-cover" alt="banner">
-                    <div class="absolute top-0 left-0 w-full h-full bg-[var(--p-primary-500)] opacity-70"></div>
+                    <div class="absolute top-0 left-0 w-full h-full bg-[var(--p-primary-400)] opacity-50"></div>
                     <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center text-center">
                         <p class="text-[2.75rem] font-bold text-white">"{{ item.text }}"</p>
                     </div>
