--- a/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
+++ b/vcastplay-cms/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div id="toolbar" class="toolbar-container justify-between h-20">
     <a class="w-[10rem]" href="/">
-        <img src="assets/vcastplay.png" style="filter: drop-shadow(2px 4px 6px rgba(255, 255, 255, 0.7));" alt="app logo">
+        <img src="assets/vcastplay.png" alt="app logo">
     </a>
     <div class="flex flex-row items-center cursor-pointer text-white md:mx-2">
         <p-avatar label="N" shape="circle" size="large" [routerLink]="['/settings/profile']"></p-avatar>
