--- a/vcastplay-cms/src/app/pages/schedules/schedule-list/schedule-list.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-list/schedule-list.component.html
@@ -49,6 +49,13 @@
                         </td>
                     </tr>
                 </ng-template>
+                <ng-template #emptymessage>
+                    <tr>
+                        <td colspan="9" [height]="20">
+                            <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+                        </td>
+                    </tr>
+                </ng-template>
             </p-table>
         </div>
     </p-card>
